# telebot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  config.yaml  course_busters_topics.json  docker-compose.nas.yml  docker-compose.yml  explore_genai.py  justfile  list_models.py  pyproject.toml  sse_server.py  test.session  test_asian_artists_output.py  verify_imports.py
benchmark/: README.md  TODO.md  autolabel_categorize.py  bench_categorize.py  bench_preference.py  bench_sweep.py  compare_chunking.py  group_by.py  inspect_failures.py  label.py  quick.py  sample.py  silver_label.py
benchmark/configs/: default.yaml  models_3way.yaml
benchmark/fixtures/: 1d.jsonl  30d.jsonl  7d.jsonl  7d_full.jsonl  canon10.jsonl
benchmark/labels/: 1d.yaml  canon10_gold.yaml  canon10_silver_backup.yaml  canon10_uncertain.md
data/: reports.db
scripts/: backfill_seen.py  debug_topics.py  explore_genai.py  find_channel.py  list_models.py  repro_bug.py  test_2d_artists.py  test_asian_artists_output.py  test_pdf_links.py  verify_imports.py
src/course_scout/: __init__.py
src/course_scout/application/: batch_scan.py  digest.py  digest_processing.py  executive_summary.py  worker.py
src/course_scout/domain/: models.py  services.py
src/course_scout/infrastructure/: agents.py  config.py  dedup.py  deep_links.py  logging_config.py  notifier.py  persistence.py  pins.py  rate_limiter.py  reporting.py  runtime.py  summarization.py  tasknotes.py  telegram.py  vision.py
src/course_scout/infrastructure/providers/: claude_provider.py  openai_agents_provider.py  openai_provider.py
src/course_scout/interfaces/api/: app.py  sse.py
src/course_scout/interfaces/cli/: main.py
src/course_scout/interfaces/mcp/: main.py
src/telebot/: __init__.py
src/telebot/application/: digest.py  worker.py
src/telebot/domain/: models.py  services.py
src/telebot/infrastructure/: agents.py  config.py  gemini.py  logging_config.py  notifier.py  rate_limiter.py  reporting.py  summarization.py  telegram.py
src/telebot/infrastructure/providers/: gemini_provider.py  groq_provider.py
src/telebot/interfaces/api/: app.py  sse.py
src/telebot/interfaces/cli/: main.py
src/telebot/interfaces/mcp/: main.py
tests/: conftest.py
tests/application/: test_digest_extra.py  test_digest_usecase.py  test_executive_summary.py  test_worker.py
tests/domain/: test_models.py
tests/infrastructure/: test_agents.py  test_config.py  test_dedup.py  test_gemini.py  test_notifier.py  test_providers.py  test_rate_limiter.py  test_reporting.py  test_schema_parsing.py  test_summarization.py  test_tasknotes.py  test_telegram.py  test_telegram_extra.py
tests/integration/: test_batch_scan_coverage.py
tests/interfaces/: test_cli.py  test_cli_extra.py  test_cli_helpers.py  test_mcp.py  test_sse.py
